--- a/styles-00.css
+++ b/styles-00.css
@@ -2,24 +2,7 @@
    Reset Body & HTML
 ----------------------------------- */
 html, body {
-  background: linear-gradient(
-    135deg,
-    /* Brighter highlight */
-    #f8f8f8 0%,
-    /* Slightly darker */
-    #eaeaea 10%,
-    /* Subtle silver tone */
-    #d4d4d4 25%,
-    /* Another highlight area */
-    #ececec 40%,
-    /* Slightly more noticeable sky blue */
-    #e1effc 55%,
-    /* Bounce back to a lighter area */
-    #e8e8e8 70%,
-    /* Soft return to mid-silver */
-    #cfcfcf 85%,
-    /* End on a bright tone again */
-    #f8f8f8 100%
+  background:white
   );
   background-size: 100% 100%;
   margin: 0;
