--- a/style.css
+++ b/style.css
@@ -133,6 +133,15 @@ a {
 
 
 /* ---------------------------------
+   Standard Viewports (< 1920px)
+----------------------------------- */
+@media (max-width: 1919px) {
+  html, body {
+    font-size: 10px;
+  }
+}
+
+/* ---------------------------------
    Mobile Layout (<= 768px)
 ----------------------------------- */
 @media (max-width: 768px) {
